--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # No external dependencies required for core functionality
 
 # Development dependencies
-pyinstaller>=6.12.0
+cx_Freeze==8.1.0
 pytest>=8.3.5
 isort>=6.0.1
 ruff>=0.11.4
